# tyrolabs

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
src/: App.tsx  index.css  main.tsx  themes.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: autostart.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  clipboard.rs  commands.rs  error.rs  lib.rs  main.rs  models.rs  state.rs  store.rs  tray.rs  tray_test.rs
src-tauri/src/services/: app_settings.rs  mod.rs  store.rs  system.rs  tray.rs
src-tauri/src/tools/: mod.rs
src-tauri/src/tools/capture/: commands.rs  mod.rs  state.rs  windows.rs
src-tauri/src/tools/clipboard/: commands.rs  mod.rs  state.rs  storage.rs  watcher.rs  win_files.rs
src-tauri/src/tools/notes/: commands.rs  media.rs  mod.rs  state.rs  storage.rs
src-tauri/src/tools/password/: commands.rs  mod.rs  wordlist.rs
src/components/: icons.tsx
src/components/groups/: CollectionBar.tsx  ConfirmationModal.tsx  CreateCollectionModal.tsx
src/components/layout/: AnimatedLogo.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  WinBtn.tsx
src/components/overlays/: CaptureOverlay.tsx  (+5 more)
src/data/: seed.ts
src/hooks/: useAppEvents.ts  useAutostart.ts  useClipboardSelection.ts  useClipboardShortcuts.ts  useClipboardViews.ts  useNotesStore.ts  useNotesViews.ts  useToast.ts
src/lib/: clipboard-store.ts  clips.ts  colors.ts  i18n.tsx  image-assets.ts  note-append.ts  note-assets.ts  notes-conversion.ts  strings.ts  theme.tsx
(+29 files in other folders)
