[package]
name = "tyrolabs-toolbox"
version = "0.1.0"
description = "TyroLabs V2 — clipboard manager"
authors = ["Tyyyros"]
edition = "2021"

[lib]
name = "tyrolabs_toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image", "protocol-asset"] }
tauri-plugin-store = "2"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25.10"
chrono = "0.4.44"
