[package]
name = "tyrolabs-toolbox"
version = "0.1.4"
description = "TyroLabs V2 — clipboard manager"
authors = ["Tyyyros"]
edition = "2021"

[lib]
name = "tyrolabs_toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image", "protocol-asset"] }
tauri-plugin-store = "2"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25.10"
chrono = "0.4.44"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
screenshots = "0.8.10"
base64 = "0.22.1"
tokio = { version = "1.52.1", features = ["full"] }
sysinfo = "0.38.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
